# XREALNativeAR

./: .gitignore  CAMERA_VERIFICATION.md  MODELS.md  MODEL_CONVERSION_GUIDE.md  NEXT_STEPS.md  NPU_DEBUG.md  PLAN_B_DIRECT.md  PLAN_B_GUIDE.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  UVC_SETUP_GUIDE.md  app_dependencies.txt  app_dependencies_utf8.txt  build.gradle  build_error.txt  build_error_2.txt  build_error_3.txt  build_error_4.txt  build_error_detail.txt  build_error_utf8.txt  build_fix.bat  calibrate_stereo.py  compile_error.txt  compile_whisper_qai.py  debug_qai_hub.py  debug_vocab.py  dependencies.txt  dependencies_utf8.txt  deploy_to_galaxy.ps1  encoding_check.txt  existing_files.txt  existing_files_utf8.txt  expressions.txt  extract_code.py  extract_text.py  final_context.txt  find_whisper_model.py  force_compile_whisper.py  gemini_extracted.txt  (+14 more)
.agent/workflows/: deploy.md
SHARED/: CHANGELOG.md  DECISIONS.md  REQUESTS.md
ai-common/: build.gradle
apk_verify_v3/: AndroidManifest.xml  classes2.dex  classes3.dex  classes4.dex  classes5.dex  classes6.dex  resources.arsc
apk_verify_v3/res/animator/: mtrl_card_state_list_anim.xml
apk_verify_v3/res/animator-v21/: m3_appbar_state_list_animator.xml
apk_verify_v3/res/color/: abc_secondary_text_material_light.xml  design_box_stroke_color.xml  m3_card_stroke_color.xml  m3_dark_default_color_primary_text.xml  m3_dark_default_color_secondary_text.xml  m3_dark_highlighted_text.xml  m3_dark_hint_foreground.xml  m3_dark_primary_text_disable_only.xml  m3_default_color_primary_text.xml  m3_default_color_secondary_text.xml  m3_highlighted_text.xml  m3_hint_foreground.xml  m3_primary_text_disable_only.xml  material_personalized__highlighted_text.xml  material_personalized_color_primary_text.xml  material_personalized_color_primary_text_inverse.xml  material_personalized_color_secondary_text.xml  material_personalized_color_secondary_text_inverse.xml  material_personalized_hint_foreground.xml  material_personalized_hint_foreground_inverse.xml  material_personalized_primary_inverse_text_disable_only.xml  material_personalized_primary_text_disable_only.xml  switch_thumb_material_light.xml
apk_verify_v3/res/color-v31/: m3_dynamic_dark_default_color_primary_text.xml  m3_dynamic_dark_default_color_secondary_text.xml  m3_dynamic_dark_highlighted_text.xml  m3_dynamic_dark_hint_foreground.xml  m3_dynamic_dark_primary_text_disable_only.xml  m3_dynamic_default_color_primary_text.xml  m3_dynamic_default_color_secondary_text.xml  m3_dynamic_highlighted_text.xml  m3_dynamic_hint_foreground.xml  m3_dynamic_primary_text_disable_only.xml
apk_verify_v3/res/drawable/: $avd_hide_password__0.xml  $avd_hide_password__1.xml  $avd_show_password__1.xml  $m3_avd_hide_password__1.xml  $m3_avd_show_password__0.xml  $m3_avd_show_password__1.xml  $mtrl_checkbox_button_icon_checked_indeterminate__0.xml  $mtrl_checkbox_button_icon_indeterminate_checked__0.xml  $mtrl_switch_thumb_checked_pressed__0.xml  $mtrl_switch_thumb_checked_unchecked__0.xml  $mtrl_switch_thumb_checked_unchecked__1.xml  $mtrl_switch_thumb_pressed_checked__0.xml  $mtrl_switch_thumb_pressed_unchecked__0.xml  $mtrl_switch_thumb_unchecked_checked__0.xml  $mtrl_switch_thumb_unchecked_checked__1.xml  $mtrl_switch_thumb_unchecked_pressed__0.xml  abc_btn_check_material_anim.xml  design_ic_visibility.xml  design_password_eye.xml  ic_launcher_fallback.xml  (+37 more)
apk_verify_v3/res/drawable-v23/: m3_radiobutton_ripple.xml  m3_selection_control_ripple.xml  mtrl_popupmenu_background_overlay.xml
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  imu_reader.h  llama_bridge.cpp  native_bridge.cpp  nrsdk_bridge.cpp  nrsdk_bridge.h  qnn_runtime.cpp  qnn_runtime.h  stereo_camera.cpp  stereo_camera.h  xreal_camera.h  yolo_detector.cpp  yolo_detector.h
autonomy/: CLAUDE.md  build.gradle
core/: CLAUDE.md  build.gradle
core-models/: CLAUDE.md  build.gradle
hardware-test-app/: build.gradle
input/: CLAUDE.md  TEST_REPORT.md  build.gradle
memory/: CLAUDE.md  build.gradle
output/: CLAUDE.md  TEST_REPORT.md  build.gradle
relay/: build.gradle
scripts/: adb_connect.sh  build_llama_android.sh  generate_whisper_assets.py
server/: .env  .env.example  backup_server.py  batch_scheduler.py  debate_graph.py  episode_store.py  expert_crews.py  forecast_engine.py  knowledge_graph.py  langchain_tools.py  llm_pool.py  mcp_server.py  mem0_service.py  nightly_reflection.py  orchestrator.py  orchestrator_v2.py  prediction_engine.py  register_tasks.bat  requirements-orchestrator.txt  requirements-v2.txt  semantic_card_store.py  setup.sh  start_batch_scheduler.bat  start_orchestrator.bat  start_orchestrator_v2.bat  storyteller_graph.py  test_library_verification.py  test_pipeline.py  timeseries_miner.py  topic_miner.py
spatial/: CLAUDE.md  TEST_REPORT.md  build.gradle
temp_aar_inspect/: AndroidManifest.xml  third_party_licenses.json  third_party_licenses.txt
temp_classes_inspect/: play-services-tflite-gpu.properties
tools/: webcam_server.py
training/: stgcn_training.py
vp_test/vp_dir/: AndroidManifest.xml
vulkan-renderer/: build.gradle
vulkan-renderer/src/main/cpp/: CMakeLists.txt  camera_background.cpp  camera_background.h  ghost_runner.cpp  ghost_runner.h  math_utils.h  mesh_renderer.cpp  mesh_renderer.h  vulkan_context.cpp  vulkan_context.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_renderer_jni.cpp
vulkan-renderer/src/main/cpp/shaders/: camera_bg.frag  camera_bg.frag.spv  camera_bg.vert  camera_bg.vert.spv  camera_bg_frag_spv.h  camera_bg_vert_spv.h  ghost.frag  ghost.frag.spv  ghost.vert  ghost.vert.spv  ghost_frag_spv.h  ghost_vert_spv.h  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  mesh_frag_spv.h  mesh_vert_spv.h  triangle.vert.spv  triangle_frag_spv.h  triangle_vert_spv.h
wear/: build.gradle
whisper-standalone/: build.gradle
xreal-hardware-standalone/: PROTOCOL.md  build.gradle
xreal-hardware-standalone/src/main/cpp/: CMakeLists.txt  native_hw.cpp  usb_iso_camera.cpp  v4l2_rgb_camera.cpp  vio_bridge.cpp  vio_bridge.h  vio_jni.cpp  xreal_cam_driver.cpp
(+565 files in other folders)
